--- a/src/_cards.scss
+++ b/src/_cards.scss
@@ -18,6 +18,7 @@ $description-size: 7pt;
     margin:5px;
     border:1px solid grey;
     text-align: center;
+    overflow: hidden;
 
     .bottom {
         position: absolute;
