--- a/src/_player-table.scss
+++ b/src/_player-table.scss
@@ -1,5 +1,5 @@
 .player-table {
-    width: 400px;
+    width: 420px;
     position: absolute;
     display: flex;
     flex-direction: column;
