--- a/src/_table.scss
+++ b/src/_table.scss
@@ -3,9 +3,14 @@
 
     #table-center {
         position: absolute;
-        width: 400px;
+        width: 420px;
+
+        #visible-cards {
+            margin-bottom: 10px;
+        }
     
         #board {
+            margin-left: 10px;
             position: relative;
             width: 400px;
             height: 400px;
